fixed questions on walkthrough show page, need to make charts for yes's

--- a/zwpa_app/app/views/walkthroughs/show.html.erb
+++ b/zwpa_app/app/views/walkthroughs/show.html.erb
@@ -21,137 +21,137 @@
 </p>
 
 <p>
-  <strong>Other businesses:</strong>
+  <strong>Are there other spaces/businesses (Leased or Owned/Operated) in the building?</strong>
   <%= @walkthrough.other_businesses %>
 </p>
 
 <p>
-  <strong>Other businesses type:</strong>
+  <strong>If yes, what type of business/spaces? (i.e. coffee shop, bar, restaurant, gift shop, business center): </strong>
   <%= @walkthrough.other_businesses_type %>
 </p>
 
 <p>
-  <strong>Ownership:</strong>
+  <strong>Is your building owned or leased?</strong>
   <%= @walkthrough.ownership %>
 </p>
 
 <p>
-  <strong>Waste disposal contract:</strong>
+  <strong>If leased, does the leasing agent control the solid waste/recycling disposal contract?</strong>
   <%= @walkthrough.waste_disposal_contract %>
 </p>
 
 <p>
-  <strong>Waste management cost:</strong>
+  <strong>If leased, are waste management costs included in the rent payment?</strong>
   <%= @walkthrough.waste_management_cost %>
 </p>
 
 <p>
-  <strong>Loading dock:</strong>
+  <strong>Does your building have a Loading dock:</strong>
   <%= @walkthrough.loading_dock %>
 </p>
 
 <p>
-  <strong>Freight elevators:</strong>
+  <strong>Freight elevators?</strong>
   <%= @walkthrough.freight_elevators %>
 </p>
 
 <p>
-  <strong>Storage space:</strong>
+  <strong>Ample storage space?</strong>
   <%= @walkthrough.storage_space %>
 </p>
 
 <p>
-  <strong>Storage space details:</strong>
+  <strong>Please explain.</strong>
   <%= @walkthrough.storage_space_details %>
 </p>
 
 <p>
-  <strong>Trash hauler:</strong>
+  <strong>Current trash hauler:</strong>
   <%= @walkthrough.trash_hauler %>
 </p>
 
 <p>
-  <strong>Trash hauler contract:</strong>
+  <strong>Do you have a contract with them?</strong>
   <%= @walkthrough.trash_hauler_contract %>
 </p>
 
 <p>
-  <strong>Contract available:</strong>
+  <strong>If yes, is a copy available?</strong>
   <%= @walkthrough.contract_available %>
 </p>
 
 <p>
-  <strong>Annual record:</strong>
+  <strong>Do you have at least one year’s records of solid waste and/or recycling volumes?</strong>
   <%= @walkthrough.annual_record %>
 </p>
 
 <p>
-  <strong>Waste storage:</strong>
+  <strong>Where is solid waste currently stored?</strong>
   <%= @walkthrough.waste_storage %>
 </p>
 
 <p>
-  <strong>Waste containers:</strong>
+  <strong>What solid waste containers do you use?</strong>
   <%= @walkthrough.waste_containers %>
 </p>
 
 <p>
-  <strong>Buy recycled:</strong>
+  <strong>Does your company have a “Buy recycled” policy re recyclability or recycled content of products?</strong>
   <%= @walkthrough.buy_recycled %>
 </p>
 
 <p>
-  <strong>Buy recycled details:</strong>
+  <strong>If yes, please describe:</strong>
   <%= @walkthrough.buy_recycled_details %>
 </p>
 
 <p>
-  <strong>Green cleaning products:</strong>
+  <strong>Does your company have a policy of purchasing non-toxic/“Green” cleaning products?</strong>
   <%= @walkthrough.green_cleaning_products %>
 </p>
 
 <p>
-  <strong>Green cleaning details:</strong>
+  <strong>If yes, please describe:</strong>
   <%= @walkthrough.green_cleaning_details %>
 </p>
 
 <p>
-  <strong>Mandated recycling:</strong>
+  <strong>Is your building located in a recycling mandated community?</strong>
   <%= @walkthrough.mandated_recycling %>
 </p>
 
 <p>
-  <strong>Recycling program:</strong>
+  <strong>Does your building currently have a recycling program?</strong>
   <%= @walkthrough.recycling_program %>
 </p>
 
 <p>
-  <strong>Recycling details:</strong>
+  <strong>If yes, describe your current recycling system and material collected for recycling (e.g. “We collect office paper in 90 gallon toters”).</strong>
   <%= @walkthrough.recycling_details %>
 </p>
 
 <p>
-  <strong>Recycling stream:</strong>
+  <strong>Does your building currently utilize a duel-stream or single-stream recycling program in your building?</strong>
   <%= @walkthrough.recycling_stream %>
 </p>
 
 <p>
-  <strong>Recycling stream details:</strong>
+  <strong>Details (For example: “We collect white office and mixed paper in separate 90 gallon toters”):</strong>
   <%= @walkthrough.recycling_stream_details %>
 </p>
 
 <p>
-  <strong>Discontinued recycling:</strong>
+  <strong>If your company was recycling, and discontinued the effort, please explain why.</strong>
   <%= @walkthrough.discontinued_recycling %>
 </p>
 
 <p>
-  <strong>Current compost:</strong>
+  <strong>Does your company currently compost organic materials such as food waste/yard waste?</strong>
   <%= @walkthrough.current_compost %>
 </p>
 
 <p>
-  <strong>Past compost:</strong>
+  <strong>Has your organization composted organic material in the past?</strong>
   <%= @walkthrough.past_compost %>
 </p>
 
@@ -266,22 +266,22 @@
 </p>
 
 <p>
-  <strong>Zw policy:</strong>
+  <strong>Does your company currently have a Zero Waste Policy in place? This would require 90% of overall diversion of landfill for non-hazardous wastes discarded materials are reused, reused, recycled, composted, or recovered for productive use in nature or the economy at biological temperatures.</strong>
   <%= @walkthrough.ZW_policy %>
 </p>
 
 <p>
-  <strong>Leed:</strong>
+  <strong>Is your building/organization LEED Certified?</strong>
   <%= @walkthrough.LEED %>
 </p>
 
 <p>
-  <strong>Recertify leed:</strong>
+  <strong>If so, is your building/organization looking to recertify your LEED building?</strong>
   <%= @walkthrough.recertify_LEED %>
 </p>
 
 <p>
-  <strong>Requesting audit services:</strong>
+  <strong>Is your building requesting PRC for waste audit services?</strong>
   <%= @walkthrough.requesting_audit_services %>
 </p>
 
