--- a/zwpa_app/app/assets/stylesheets/walkthroughs.css.scss
+++ b/zwpa_app/app/assets/stylesheets/walkthroughs.css.scss
@@ -41,6 +41,10 @@ input[type=checkbox]:not(old){
 
 }
 
+
+
+
+
 .checkbox{
   width            : 100%;
   height           : 2.5em;
@@ -58,6 +62,10 @@ input[type=checkbox]:not(old){
 
 }
 
+.radio-check{
+    border           : 1.0em solid rgb(0,0,0);
+}
+
 .form-back{
  
   border           : 0.2em solid rgb(182,182,182);
@@ -67,9 +75,6 @@ input[type=checkbox]:not(old){
 
 }
 
-.button{
-  color:WHITE;
-}
 
 
 
