reformatted show page to have all sections in one column

--- a/zwpa_app/app/views/requests/show.html.erb
+++ b/zwpa_app/app/views/requests/show.html.erb
@@ -29,7 +29,7 @@
     </div>
   </fieldset>
 
-<div class="show-for-large-up large-5 columns">
+<div class="small-12 medium-12 large-7 columns">
   <fieldset>
   <legend><h3>Request Details</h3></legend>
   <p>
@@ -84,7 +84,7 @@
   </fieldset>
 </div>
 
-<div class="notes">
+<div class="small-12 medium-12 large-7 columns">
   <fieldset>
   <legend><h3>Notes</h3></legend>
 <!--   ********* TEST AFTER NOTE MODEL/CONTROLLER ARE DONE ********* -->
@@ -96,6 +96,7 @@
   </ul> -->
   </fieldset>
 </div>
-
+<div class="small-12 medium-12 large-7 columns">
 <%= link_to 'Edit Request', edit_request_path(@request), :class => "button" %>
 <%= link_to 'Back to All Requests', requests_path, :class => "button" %>
+</div>
