changed add customer button to foundation button

--- a/zwpa_app/app/views/customers/_form.html.erb
+++ b/zwpa_app/app/views/customers/_form.html.erb
@@ -16,6 +16,6 @@
     <%= f.text_field :company_name %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Add Customer", class: 'button small' %>
   </div>
 <% end %>
