--- a/zwpa_app/app/views/requests/_form.html.erb
+++ b/zwpa_app/app/views/requests/_form.html.erb
@@ -16,11 +16,11 @@
     <%= f.collection_select :customer_id, Customer.alphabetical.all, :id, :company_name, prompt: "Select customer..." %>
   </div>
   <div class="field">
-    <%= f.label :contact_firstname %><br>
+    <%= f.label "Contact First Name" %><br>
     <%= f.text_field :contact_firstname %>
   </div>
   <div class="field">
-    <%= f.label :contact_lastname %><br>
+    <%= f.label "Contact Last Name" %><br>
     <%= f.text_field :contact_lastname %>
   </div>
   <div class="field">
@@ -32,7 +32,7 @@
     <%= f.text_field :email %>
   </div>
   <div class="field">
-    <%= f.label :phone %><br>
+    <%= f.label "Phone (ex: 111-222-3333)" %><br>
     <%= f.text_field :phone %>
   </div>
   <div class="field">
@@ -43,10 +43,10 @@
     <%= f.label :city %><br>
     <%= f.text_field :city %>
   </div>
-  <div class="field">
-    <%= f.label :state %><br>
-    <%= f.text_field :state %>
-  </div>
+<!--   <div class="field">
+    <%#= f.label :state %><br>
+    <%#= f.text_field :state %>
+  </div> -->
   <div class="field">
     <%= f.label :date %><br>
     <%= f.date_select :date %>
@@ -55,6 +55,6 @@
   <%#= render 'note_form' %>
   
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Save Request", class: 'button' %>
   </div>
 <% end %>
