fixed minor error on requests

--- a/zwpa_app/app/views/home/_recent_requests.html.erb
+++ b/zwpa_app/app/views/home/_recent_requests.html.erb
@@ -8,7 +8,7 @@
   <% requests.each do |request| %>
     <tr>
       <!-- How do I get the company name of request??? -->
-      <td><%= link_to request.customer.company_name, customer %></td>
+      <td><%= link_to request.customer.company_name, requests_path(request) %></td>
       <td><%= request.date%></td>
       
       
