--- a/zwpa_app/app/views/customers/show.html.erb
+++ b/zwpa_app/app/views/customers/show.html.erb
@@ -10,5 +10,6 @@
   <%= @customer.company_name %>
 </p>
 
+<%= link_to 'Add Request', new_request_path(:customer_id => @customer.id) %><br><br>
 <%= link_to 'Edit', edit_customer_path(@customer) %> |
 <%= link_to 'Back', customers_path %>
