--- a/zwpa_app/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/zwpa_app/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1275,7 +1275,7 @@ $button-font-color: $white;
 
 // These control the table cell border style
 // $table-border-style: solid;
-// $table-border-size: 1px;
+$table-border-size: 1px;
 // $table-border-color: $gainsboro;
 
 // These control the table head styles
@@ -1294,7 +1294,7 @@ $button-font-color: $white;
 // These are for controlling the layout, display and margin of tables
 // $table-layout: auto;
 // $table-display: table-cell;
-// $table-margin-bottom: rem-calc(20);
+$table-margin-bottom: rem-calc(0);
 
 // 31. Tabs
 // - - - - - - - - - - - - - - - - - - - - - - - - -
