--- a/zwpa_app/app/views/customers/index.html.erb
+++ b/zwpa_app/app/views/customers/index.html.erb
@@ -7,8 +7,11 @@
 
 </div>
 
-<%= render 'all_customers' %>
-
+<div class="row">
+  <div class="small-12 columns">
+    <%= render 'all_customers' %>
+  </div>
+</div>
 <br>
 
 
