--- a/zwpa_app/app/views/home/index.html.erb
+++ b/zwpa_app/app/views/home/index.html.erb
@@ -7,9 +7,12 @@
 
 </div>
 
+</br>
+</br>
+
 
 <!-- Right column displays recently added clients and documents -->
-<div class="show-for-large-up large-5 columns">
+<div class=" large-5 columns">
 	<div class="row">
 		<div class="small-12 columns">
 			<h4>Recent Audits</h4>
