--- a/zwpa_app/app/views/customers/_all_customers.html.erb
+++ b/zwpa_app/app/views/customers/_all_customers.html.erb
@@ -14,9 +14,9 @@
         <td><%= link_to customer.company_name, customer %></td>
         <%#= customer.requests.last.created%>
         <!-- I don't know how to get this right now -->
-        <td>Request Date - Name of Contact</td>
+        <td><%= link_to 'Request Date - Name of Contact', customer%></td>
         <!-- Make this an icon later -->
-        <td>></td>
+        <td><%= link_to '>', customer%></td>
       </tr>
     <% end %>
   </tbody>
