--- a/zwpa_app/app/assets/stylesheets/walkthroughs.css.scss
+++ b/zwpa_app/app/assets/stylesheets/walkthroughs.css.scss
@@ -72,6 +72,8 @@ input[type=checkbox]:not(old){
   border-radius    : 1em;
   padding-left: 2em;
   padding-right: 2em;
+  padding-top: 2em;
+  margin-top: 1em;
 
 }
 
