--- a/zwpa_app/app/views/requests/index.html.erb
+++ b/zwpa_app/app/views/requests/index.html.erb
@@ -1,4 +1,7 @@
-<h1>Listing requests</h1>
+<div class="small-12 columns">
+  <h1 class="button-head">All Requests</h1>
+  <div class="add_button"><%= link_to '+ Add Request', new_request_path, class: 'button round tiny left ' %></div>
+</div>
 
 <table>
   <thead>
