cleaned up the requests index page a bit

--- a/zwpa_app/app/views/requests/_all_requests.html.erb
+++ b/zwpa_app/app/views/requests/_all_requests.html.erb
@@ -2,9 +2,9 @@
   <thead>
     <tr>
       <th>Customer</th>
-      <th>Date</th>
-      <th>Contact Name</th>
-      <th>Edit</th>
+      <th>Date Initiated</th>
+      <th>Contact</th>
+      <th></th>
     </tr>
   </thead>
 
@@ -14,9 +14,9 @@
         <!-- <td><%= request.customer_id %></td> -->
         <td><%= link_to request.customer.company_name, request_path(request) %></td>
         <td><%= link_to request.date.strftime('%b %e, %Y'), request_path(request) %></td>
-        <td><%= link_to request.contact_firstname+" "+request.contact_lastname, request_path(request) %></td>
+        <td><%= link_to request.name, request_path(request) %></td>
         
-        <td><%= link_to 'Edit', edit_request_path(request), class: 'button tiny' %></td>
+        <td>><%#= link_to 'Update', edit_request_path(request), class: 'button tiny' %></td>
       </tr>
     <% end %>
   </tbody>
