--- a/zwpa_app/app/views/requests/show.html.erb
+++ b/zwpa_app/app/views/requests/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<div class="small-12 large-7 columns">
+<div class="small-12 large-8 columns">
   <h4>
     <%= link_to @request.customer.company_name, @request.customer %> > 
     <%= @request.date.strftime('%B %e, %Y') %>
@@ -15,8 +15,8 @@
 
   <div class="add_button show-for-small-only">
    <ul class="button-group radius ">
-    <li><%=link_to "+ Add Questionnaire",new_walkthrough_path(:request_id => @request.id), class: "button small "%></li>
-    <li><%=link_to "+ Add Audit", new_audit_path(:request_id => @request.id), class: "button small" %></li>
+    <li><%=link_to "+ Add Questionnaire",new_walkthrough_path(:request_id => @request.id), class: "button tiny "%></li>
+    <li><%=link_to "+ Add Audit", new_audit_path(:request_id => @request.id), class: "button tiny" %></li>
   </ul>
 </div>
 
@@ -34,10 +34,8 @@
   </div>
 
   <div class="add_button show-for-small-only">
-   <ul class="button-group radius ">
-    <li><%=link_to "+ New Note",new_note_path(:request_id => @request.id), class: "button small "%></li>
-   
-  </ul>
+    <%=link_to "+ New Note",new_note_path(:request_id => @request.id), class: "button tiny "%>
+  
 </div>
 
 <%= render 'notes_by_request' %>
@@ -56,7 +54,7 @@
 
 </div>
 
-<div class="medium-5 columns show-for-large-only ">
+<div class="medium-4 columns show-for-large-only ">
     <%= render 'request_details' %>
 </div>
 
