--- a/zwpa_app/app/views/notes/_form.html.erb
+++ b/zwpa_app/app/views/notes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@note) do |f| %>
+<%= form_for @note, html:{multipart: true} do |f| %>
   <% if @note.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@note.errors.count, "error") %> prohibited this note from being saved:</h2>
@@ -15,10 +15,13 @@
     <%= f.label :request_id %><br>
     <%= f.number_field :request_id %>
   </div>
+
   <div class="field">
-    <%= f.label :photo %><br>
-    <%= f.text_field :photo %>
+    <%= f.label :image %><br>
+    <%= f.file_field :image %>
   </div>
+
+
   <div class="field">
     <%= f.label :description %><br>
     <%= f.text_area :description %>
