Added large image save option

--- a/zwpa_app/app/views/notes/show.html.erb
+++ b/zwpa_app/app/views/notes/show.html.erb
@@ -8,7 +8,7 @@
 
 <p>
   <strong>Image:</strong>
-  <%= image_tag @note.image.url(:normal) %>
+  <%= image_tag @note.image.url(:large) %>
 </p>
 
 <p>
