updated notes partial in request show page

--- a/zwpa_app/app/views/requests/_notes_by_request.html.erb
+++ b/zwpa_app/app/views/requests/_notes_by_request.html.erb
@@ -6,8 +6,20 @@
 
     <tbody>
       <% @notes.each do |note| %>
-        <td><%=link_to note.created_at, note_path(note)%></td>
-        <td><%=link_to note.description, note_path(note)%></td>
+      <tr>
+      	<td>
+      		<%if note.image.exists?%>
+      			<%= image_tag note.image.url(:thumb) %></br>
+      		<%end%>
+      		<%= note.created_at.strftime('%b %e, %Y')%></td>
+        <td>
+        	<% if note.description.blank? %>
+        		<%=link_to "No description...", note_path(note)%>
+        	<%else%>
+        		<%=link_to note.description, note_path(note)%>
+        	<%end%>
+        </td>
+    </tr>
         
       <% end %>
     
