--- a/zwpa_app/app/views/customers/show.html.erb
+++ b/zwpa_app/app/views/customers/show.html.erb
@@ -13,5 +13,5 @@
 
 <div class="small-12 columns">
 	<%= link_to 'Back', customers_path, class: "button" %>
-	<%= link_to '+ Add Request', new_request_path, class: "button" %>
+	<%= link_to '+ Add Request', new_request_path(:customer_id => @customer.id), class: "button" %>
 </div>
